--- a/404.html
+++ b/404.html
@@ -28,13 +28,13 @@
   <link rel="stylesheet" href="/css/hugo-academic.css">
   
 
-  <link rel="alternate" href="https://example.com/404.html/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
-  <link rel="feed" href="https://example.com/404.html/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
+  <link rel="alternate" href="https://qawarrior.github.io/404.html/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
+  <link rel="feed" href="https://qawarrior.github.io/404.html/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://example.com/404/">
+  <link rel="canonical" href="https://qawarrior.github.io/404/">
 
   
 
@@ -150,46 +150,46 @@
   <h2>Recent Posts</h2>
   
   <ul>
-    <li><a href="https://example.com/post/">Posts</a></li>
+    <li><a href="https://qawarrior.github.io/post/">Posts</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://example.com/post/game-of-thrones/">Game Of Thrones</a></li>
+    <li><a href="https://qawarrior.github.io/post/game-of-thrones/">Game Of Thrones</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://example.com/post/getting-started/">Getting started with the Academic framework for Hugo</a></li>
+    <li><a href="https://qawarrior.github.io/post/getting-started/">Getting started with the Academic framework for Hugo</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://example.com/post/widgets/">Customizing the homepage with widgets</a></li>
+    <li><a href="https://qawarrior.github.io/post/widgets/">Customizing the homepage with widgets</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://example.com/post/managing-content/">Managing content</a></li>
+    <li><a href="https://qawarrior.github.io/post/managing-content/">Managing content</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://example.com/post/writing-markdown-latex/">Writing content with Markdown, LaTeX, and Shortcodes</a></li>
+    <li><a href="https://qawarrior.github.io/post/writing-markdown-latex/">Writing content with Markdown, LaTeX, and Shortcodes</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://example.com/post/migrate-from-jekyll/">Migrate from Jekyll to Hugo</a></li>
+    <li><a href="https://qawarrior.github.io/post/migrate-from-jekyll/">Migrate from Jekyll to Hugo</a></li>
   </ul>
   
 
   <h2>Recent Publications</h2>
   
   <ul>
-    <li><a href="https://example.com/publication/">Publications</a></li>
+    <li><a href="https://qawarrior.github.io/publication/">Publications</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://example.com/publication/person-re-identification/">A Person Re-Identification System For Mobile Devices</a></li>
+    <li><a href="https://qawarrior.github.io/publication/person-re-identification/">A Person Re-Identification System For Mobile Devices</a></li>
   </ul>
   
   <ul>
-    <li><a href="https://example.com/publication/clothing-search/">Mobile visual clothing search</a></li>
+    <li><a href="https://qawarrior.github.io/publication/clothing-search/">Mobile visual clothing search</a></li>
   </ul>
   
 
