--- a/publication/index.html
+++ b/publication/index.html
@@ -23,13 +23,13 @@
   <link rel="stylesheet" href="/css/hugo-academic.css">
   
 
-  <link rel="alternate" href="https://example.com/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
-  <link rel="feed" href="https://example.com/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
+  <link rel="alternate" href="https://qawarrior.github.io/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
+  <link rel="feed" href="https://qawarrior.github.io/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://example.com/publication/">
+  <link rel="canonical" href="https://qawarrior.github.io/publication/">
 
   
 
@@ -177,7 +177,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/publication/person-re-identification/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io/publication/person-re-identification/">
   Details
 </a>
 
@@ -191,7 +191,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/project/deep-learning/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io/project/deep-learning/">
   Project
 </a>
 
@@ -212,7 +212,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/publication/clothing-search/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io/publication/clothing-search/">
   Details
 </a>
 
@@ -222,27 +222,27 @@
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io">
   Slides
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io">
   Video
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io">
   Code
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io">
   Dataset
 </a>
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/project/deep-learning/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io/project/deep-learning/">
   Project
 </a>
 
