--- a/talk/index.html
+++ b/talk/index.html
@@ -23,13 +23,13 @@
   <link rel="stylesheet" href="/css/hugo-academic.css">
   
 
-  <link rel="alternate" href="https://example.com/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
-  <link rel="feed" href="https://example.com/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
+  <link rel="alternate" href="https://qawarrior.github.io/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
+  <link rel="feed" href="https://qawarrior.github.io/index.xml" type="application/rss+xml" title="QAWarrior Freelance Developer">
 
   <link rel="icon" type="image/png" href="/img/icon.png">
   <link rel="apple-touch-icon" type="image/png" href="/img/apple-touch-icon.png">
 
-  <link rel="canonical" href="https://example.com/talk/">
+  <link rel="canonical" href="https://qawarrior.github.io/talk/">
 
   
 
@@ -164,7 +164,7 @@
 
 
 
-<a class="btn btn-primary btn-outline btn-xs" href="https://example.com/talk/example-talk/">
+<a class="btn btn-primary btn-outline btn-xs" href="https://qawarrior.github.io/talk/example-talk/">
   Details
 </a>
 
