--- a/404.html
+++ b/404.html
@@ -138,31 +138,11 @@
   <h2>Recent Posts</h2>
   
   <ul>
+    <li><a href="https://qawarrior.github.io/post/golang-and-why-it-rules/">Golang And Why It Rules</a></li>
+  </ul>
+  
+  <ul>
     <li><a href="https://qawarrior.github.io/post/">Posts</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://qawarrior.github.io/post/game-of-thrones/">Game Of Thrones</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://qawarrior.github.io/post/getting-started/">Getting started with the Academic framework for Hugo</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://qawarrior.github.io/post/widgets/">Customizing the homepage with widgets</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://qawarrior.github.io/post/managing-content/">Managing content</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://qawarrior.github.io/post/writing-markdown-latex/">Writing content with Markdown, LaTeX, and Shortcodes</a></li>
-  </ul>
-  
-  <ul>
-    <li><a href="https://qawarrior.github.io/post/migrate-from-jekyll/">Migrate from Jekyll to Hugo</a></li>
   </ul>
   
 
