--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 <h1 id="biography">Biography</h1>
 
-<p>Paul Cassidy is a software developer and IT specialist with over 15 years of experience.</p>
+<p>Paul Cassidy is a software developer and IT specialist with over 15 years of experience. Paul has a great deal of experience in delivering tooling to enable development teams to easily commit, build, install and test new features of the code base. He has worked with many differing technologies.</p>
 
 
     <div class="row">
