--- a/index.html
+++ b/index.html
@@ -436,6 +436,8 @@
 
 <ol>
 <li>Stage all files for commit - <code>git add --all</code></li>
+<li>Commit to local repo - <code>git commit -m &quot;message for commit&quot;</code></li>
+<li>Push to remote repo - <code>git push origin master</code></li>
 </ol>
 
 <h3 id="hugo-site-cmds">Hugo Site Cmds</h3>
