--- a/index.html
+++ b/index.html
@@ -544,8 +544,10 @@
   <div class="article-style" itemprop="articleBody">
     
     Theses commands need to be found in the path environment variable.
-Go Tool Commands Ran from the root of the main package.  Build package and all sub-packages:
-go build -v ./...  Git Commands Ran from root of git repository.  Stage all files for commit:
+Go Tool Commands Ran from the root of the main package.
+ Build package and all sub-packages:
+go build -v ./...  Git Commands Ran from root of git repository.
+ Stage all files for commit:
 git add --all Commit to local repository:
 git commit -m &quot;message for commit&quot; Push to remote repository:
 git push origin master Pull from remote repository:
